fix collapsing of the elements in shorter windonw

--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@ body {
     display:flex;
     justify-content: center;
     align-items: center;
-    height:100vh;
+    height:100%;
+    padding:50px;
+    
 }
 
 .board{
     width:min(65%,800px);
-    height:min(80%,900px);
+    height:700px;
     background-color:ghostwhite;
     border-radius:10px;
 
@@ -22,7 +24,7 @@ body {
 .title {
     font-size:35px;
     text-align:center;
-    margin-top:20px;
+    margin-top:30px;
     text-decoration: underline 4px lightblue;
 
 }
@@ -31,7 +33,8 @@ form {
     margin-top:50px;
     display:flex;
     flex-direction:column;
-    height:100%;
+    height:80%;
+    max-height:900px;
     width:100%;
     align-items:center;
     gap:20px;
@@ -49,7 +52,7 @@ form input{
 }
 
 form input[type='submit']{
-    width:30%;
+    width:max(30%,100px);
     height:40px;
     margin-top:20px;
     font-size:25px;
